--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="google-site-verification" content="RXR9rDeMqsSHpxJ3zqmSSL0l-OOVvloJMFgFpfiPV2w" />
 <title>Octocat goes through a maze! (JavaScript SVG Example)</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 </head>
