--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="all">
 <article>
 <header>
+	<a target="_blank" href="http://kiritter.github.io/">Examples Home</a>
 	<h1 class="page-title">Octocat goes through a maze! (JavaScript SVG Example)</h1>
 	<p class="page-title-note">(Octocat is a registered trademark of GitHub)</p>
 </header>
@@ -70,7 +71,7 @@
 	</tr>
 	<tr>
 		<td>Blog Page</td>
-		<td> : <a target="_blank" href="http://kiritter.hatenablog.com/">http://kiritter.hatenablog.com/</a></td>
+		<td> : <a target="_blank" href="http://kiritter.hatenablog.com">http://kiritter.hatenablog.com</a></td>
 	</tr>
 	<tr>
 		<td>Twitter</td>
