--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Octocat goes through a maze! (JavaScript SVG Example)</title>
+<title>Octocat goes through a maze! (JavaScript SVG MVC Example)</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
@@ -11,7 +11,7 @@
 <article>
 <header>
 	<a target="_blank" href="http://kiritter.github.io/">Examples Home</a>
-	<h1 class="page-title">Octocat goes through a maze! (JavaScript SVG Example)</h1>
+	<h1 class="page-title">Octocat goes through a maze! (JavaScript SVG MVC Example)</h1>
 	<p class="page-title-note">(Octocat is a registered trademark of GitHub)</p>
 </header>
 
