--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="all">
 <article>
 <header>
-	<a target="_blank" href="http://kiritter.github.io/">Examples Home</a>
+	<a target="_blank" href="https://kiritter.github.io/">Examples Home</a>
 	<h1 class="page-title">Octocat goes through a maze! (JavaScript MVC SVG Example)</h1>
 	<p class="page-title-note">(Octocat is a registered trademark of GitHub)</p>
 </header>
@@ -81,17 +81,11 @@
 	</tr>
 	<tr>
 		<td>Blog Page</td>
-		<td> : <a target="_blank" href="http://kiritter.hatenablog.com">http://kiritter.hatenablog.com</a></td>
+		<td> : <a target="_blank" href="https://kiritter.hatenablog.com">https://kiritter.hatenablog.com</a></td>
 	</tr>
 	<tr>
 		<td>Twitter</td>
 		<td> : <a class="kiritter" target="_blank" href="https://twitter.com/kiritter">@kiritter</a></td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<a href="https://twitter.com/share" class="twitter-share-button" data-via="kiritter" data-lang="ja">ツイート</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		</td>
 	</tr>
 	</table>
 </footer>
