--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Octocat goes through a maze! (JavaScript MVC SVG Example)</title>
+<title>A bat goes through a maze! (JavaScript MVC SVG Example)</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-B25L64G43V"></script>
@@ -24,8 +24,8 @@
 <article>
 <header>
 	<a target="_blank" href="https://kiritter.github.io/">Examples Home</a>
-	<h1 class="page-title">Octocat goes through a maze! (JavaScript MVC SVG Example)</h1>
-	<p class="page-title-note">(Octocat is a registered trademark of GitHub)</p>
+	<h1 class="page-title">A bat goes through a maze! (JavaScript MVC SVG Example)</h1>
+	<p class="page-title-note"></p>
 </header>
 
 <section>
